--- a/curriculumCSS.css
+++ b/curriculumCSS.css
@@ -77,3 +77,12 @@ img {
 	width: 75px;
 	margin-left: 65px;
 }
+
+.quote{
+	font-size: 30 px;
+	font-family: arial;
+	margin-bottom: 40px;
+	font-weight: bold;
+	font-style: italic;
+	
+}
